# signal-stock

./: .dockerignore  .env.example  .gitignore  BACKLOG.md  CLAUDE.md  DESIGN.md  Dockerfile  NOTES-cherrypick.md  README.md  pyproject.toml  railway.json
docs/: climate-signal.md  kb-decision-architecture.md  north-star-d7.md  scenario-hypothesis.md
scripts/: backfill_us.py
src/signal_desk/: api.py  auth.py  bot.py  brain.py  brain_proposals.py  chat.py  cli.py  config.py  db.py  external_watch.py  kb.py  kb_embed.py  kb_search.py  llm.py  notify.py  shortform.py  shortform_render.py  signalcfg.py  store.py  strategy.py
src/signal_desk/broker/: kis.py  paper.py
src/signal_desk/ingest/: alphavantage.py  dart.py  ecos.py  edgar.py  fanding.py  fred.py  krx.py  krx_short.py  naver.py  news.py  outstanding.py  toss.py  us.py
src/signal_desk/reference/: cycle.py  etfs.py  glossary.py  guru_screens.py  gurus.py  quant_methods.py  sectors.py  us_ko.py  valuechain.py
src/signal_desk/signals/: accuracy.py  advisor.py  climate.py  decision.py  engine.py  fundamental.py  hypothesis.py  indicators.py  macro.py  momentum.py  narrative.py  opportunity.py  qualitative.py  quality.py  rebalance.py  regime.py  regime_zone.py  relative.py  scenario.py  short.py  target.py  valuation.py
src/signal_stock/: api.py  auth.py  cli.py  store.py
tests/: test_accuracy.py  test_alerts.py  test_bot.py  test_bot_performance.py  test_bot_safety.py  test_bot_us.py  test_brain.py  test_brain_proposals.py  test_buylist.py  test_chart_score_anchor.py  test_chat.py  test_climate.py  test_consensus.py  test_dart.py  test_data_health.py  test_db_bot.py  test_decision.py  test_disclosures.py  test_dividends.py  test_ecos_macro.py  test_engine.py  test_etfs.py  test_events.py  test_external_watch.py  test_flow.py  test_fundamental.py  test_glossary.py  test_guru_screens.py  test_hypothesis.py  test_indicators.py  test_ingest_cutoff.py  test_kb_autoroute.py  test_kb_events.py  test_kb_hybrid.py  test_kb_prune.py  test_kb_search.py  test_kb_source_probation.py  test_kb_sources.py  test_live_quotes.py  test_llm_kb.py  (+42 more)
(+2 files in other folders)
