[project]
name = "signal-desk"
version = "0.1.0"
description = "검증된 적중률 기반 주식 매매 타이밍 시그널 플랫폼"
requires-python = ">=3.11,<3.14"  # 3.14 는 pandas/pyarrow C확장 세그폴트 이력(Signal APT 참고) — 2단계에서 pandas 도입 시 주의
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "typer>=0.12",
    "rich>=13.0",
    "pandas>=2.0",
    "pyarrow>=15.0",
    "pykrx>=1.0",
    "pypdf>=4.0",              # PDF 텍스트 추출(네이티브 텍스트 PDF)
    "python-multipart>=0.0.9",  # FastAPI 파일 업로드
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]

[project.scripts]
sigdesk = "signal_desk.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
