[project]
name = "signal-desk"
version = "0.1.0"
description = "검증된 적중률 기반 주식 매매 타이밍 시그널 플랫폼"
requires-python = ">=3.11,<3.14"  # 3.14 는 pandas/pyarrow C확장 세그폴트 이력(Signal APT 참고) — 2단계에서 pandas 도입 시 주의
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "typer>=0.12",
    "rich>=13.0",
    "pandas>=2.0",
    "pyarrow>=15.0",
    "pykrx>=1.0",
    "pypdf>=4.0",              # PDF 텍스트 추출(네이티브 텍스트 PDF)
    "python-multipart>=0.0.9",  # FastAPI 파일 업로드
    "youtube-transcript-api>=1.0",  # 유튜브 자막 전문 수집(KB 소스)
]
# 숏폼 영상 렌더(cairosvg+ffmpeg)는 서버가 아니라 사용자 PC에서 수행 — 서버 의존성 아님.
# 로컬 렌더 준비물: pip install cairosvg + ffmpeg(README/zip 안내).

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]
# 진짜 시맨틱 임베딩(로컬). 없으면 hashing/OpenAI(OPENAI_API_KEY) 폴백.
embed = ["sentence-transformers>=3.0"]

[project.scripts]
sigdesk = "signal_desk.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

# SPA(web/index.html)를 설치 패키지에 포함 — 없으면 `pip install .` 후 / 가 500
[tool.setuptools.package-data]
signal_desk = ["web/*", "assets/fonts/*.ttf"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
